--- a/sd/uiconfig/simpress/ui/navigatorpanel.ui
+++ b/sd/uiconfig/simpress/ui/navigatorpanel.ui
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.20.0 -->
+<!-- Generated with glade 3.22.1 -->
 <interface domain="sd">
   <requires lib="gtk+" version="3.18"/>
+  <object class="GtkTreeStore" id="liststore2">
+    <columns>
+      <!-- column-name expander -->
+      <column type="GdkPixbuf"/>
+      <!-- column-name text -->
+      <column type="gchararray"/>
+      <!-- column-name id -->
+      <column type="gchararray"/>
+    </columns>
+  </object>
   <object class="GtkGrid" id="NavigatorPanel">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -16,7 +26,7 @@
         <property name="row_spacing">6</property>
         <property name="column_spacing">12</property>
         <child>
-          <object class="GtkComboBox" id="documents">
+          <object class="GtkComboBoxText" id="documents">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="tooltip_text" translatable="yes" context="navigatorpanel|documents|tooltip_text">Document</property>
@@ -32,13 +42,50 @@
           </packing>
         </child>
         <child>
-          <object class="sdlo-SdPageObjsTLB" id="tree:border">
-            <property name="visible">True</property>
+          <object class="GtkScrolledWindow">
             <property name="can_focus">True</property>
+            <property name="no_show_all">True</property>
             <property name="hexpand">True</property>
             <property name="vexpand">True</property>
-            <child internal-child="selection">
-              <object class="GtkTreeSelection" id="SdPageObjsTLB-selection1"/>
+            <property name="shadow_type">in</property>
+            <child>
+              <object class="GtkTreeView" id="tree">
+                <property name="width_request">-1</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="no_show_all">True</property>
+                <property name="hexpand">True</property>
+                <property name="vexpand">True</property>
+                <property name="model">liststore2</property>
+                <property name="headers_visible">False</property>
+                <property name="search_column">1</property>
+                <property name="enable_tree_lines">True</property>
+                <child internal-child="selection">
+                  <object class="GtkTreeSelection" id="Macro Library List-selection11"/>
+                </child>
+                <child>
+                  <object class="GtkTreeViewColumn" id="treeviewcolumn21">
+                    <property name="spacing">6</property>
+                    <child>
+                      <object class="GtkCellRendererPixbuf" id="cellrenderertext44"/>
+                      <attributes>
+                        <attribute name="pixbuf">0</attribute>
+                      </attributes>
+                    </child>
+                    <child>
+                      <object class="GtkCellRendererText" id="cellrenderertext22"/>
+                      <attributes>
+                        <attribute name="text">1</attribute>
+                      </attributes>
+                    </child>
+                  </object>
+                </child>
+                <child internal-child="accessible">
+                  <object class="AtkObject" id="tree-atkobject">
+                    <property name="AtkObject::accessible-name" translatable="yes" context="navigatorpanel|STR_OBJECTS_TREE">Page Tree</property>
+                  </object>
+                </child>
+              </object>
             </child>
           </object>
           <packing>
@@ -56,7 +103,6 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="tooltip_text" translatable="yes" context="navigatorpanel|first|tooltip_text">First Slide</property>
-                <property name="action_name">first</property>
                 <property name="icon_name">sd/res/nv03.png</property>
               </object>
               <packing>
@@ -69,7 +115,6 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="tooltip_text" translatable="yes" context="navigatorpanel|previous|tooltip_text">Previous Slide</property>
-                <property name="action_name">previous</property>
                 <property name="icon_name">sd/res/nv04.png</property>
               </object>
               <packing>
@@ -82,7 +127,6 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="tooltip_text" translatable="yes" context="navigatorpanel|next|tooltip_text">Next Slide</property>
-                <property name="action_name">next</property>
                 <property name="icon_name">sd/res/nv05.png</property>
               </object>
               <packing>
@@ -95,7 +139,6 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="tooltip_text" translatable="yes" context="navigatorpanel|last|tooltip_text">Last Slide</property>
-                <property name="action_name">last</property>
                 <property name="icon_name">sd/res/nv06.png</property>
               </object>
               <packing>
@@ -118,7 +161,6 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="tooltip_text" translatable="yes" context="navigatorpanel|dragmode|tooltip_text">Drag Mode</property>
-                <property name="action_name">dragmode</property>
                 <property name="icon_name">sd/res/nv09.png</property>
               </object>
               <packing>
@@ -131,7 +173,6 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="tooltip_text" translatable="yes" context="navigatorpanel|shapes|tooltip_text">Show Shapes</property>
-                <property name="action_name">shapes</property>
                 <property name="icon_name">sd/res/graphic.png</property>
               </object>
               <packing>
