--- a/svx/uiconfig/ui/docrecoveryrecoverdialog.ui
+++ b/svx/uiconfig/ui/docrecoveryrecoverdialog.ui
@@ -4,6 +4,8 @@
   <requires lib="gtk+" version="3.18"/>
   <object class="GtkTreeStore" id="liststore1">
     <columns>
+      <!-- column-name checked -->
+      <column type="gboolean"/>
       <!-- column-name image -->
       <column type="GdkPixbuf"/>
       <!-- column-name text -->
@@ -14,6 +16,10 @@
       <column type="gchararray"/>
       <!-- column-name id -->
       <column type="gchararray"/>
+      <!-- column-name chkVis -->
+      <column type="gboolean"/>
+      <!-- column-name chkTri -->
+      <column type="gboolean"/>
     </columns>
   </object>
   <object class="GtkDialog" id="DocRecoveryRecoverDialog">
@@ -38,7 +44,7 @@
             <property name="layout_style">end</property>
             <child>
               <object class="GtkButton" id="cancel">
-                <property name="label" translatable="yes" context="docrecoveryrecoverdialog|cancel">_Discard</property>
+                <property name="label" translatable="yes" context="docrecoveryrecoverdialog|cancel">_Discard All</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="can_default">True</property>
@@ -53,7 +59,7 @@
             </child>
             <child>
               <object class="GtkButton" id="next">
-                <property name="label" translatable="yes" context="docrecoveryrecoverdialog|next">_Start</property>
+                <property name="label" translatable="yes" context="docrecoveryrecoverdialog|next">_Recover Selected</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="can_default">True</property>
@@ -86,7 +92,7 @@
               <object class="GtkLabel" id="desc">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes" context="docrecoveryrecoverdialog|desc">%PRODUCTNAME will attempt to recover the state of the files you were working on before it crashed. Click 'Start' to begin the process, or click 'Discard' to cancel the recovery.</property>
+                <property name="label" translatable="yes" context="docrecoveryrecoverdialog|desc">%PRODUCTNAME will attempt to recover the state of the files you were working on before it crashed. Click 'Recover Selected' to begin the process, or click 'Discard All' to cancel the recovery.</property>
                 <property name="wrap">True</property>
                 <property name="width_chars">70</property>
                 <property name="max_width_chars">70</property>
@@ -137,18 +143,29 @@
                     <property name="vexpand">True</property>
                     <property name="model">liststore1</property>
                     <property name="headers_clickable">False</property>
-                    <property name="headers_visible">True</property>
                     <property name="search_column">0</property>
                     <property name="show_expanders">False</property>
                     <child internal-child="selection">
                       <object class="GtkTreeSelection" id="treeview-selection2"/>
                     </child>
                     <child>
+                      <object class="GtkTreeViewColumn" id="treeviewcolumn4">
+                        <property name="title" translatable="yes" context="docrecoveryrecoverdialog|recoverft">Recover</property>
+                        <child>
+                          <object class="GtkCellRendererToggle" id="cellrenderertoggle"/>
+                          <attributes>
+                            <attribute name="activatable">6</attribute>
+                            <attribute name="active">0</attribute>
+                          </attributes>
+                        </child>
+                      </object>
+                    </child>
+                    <child>
                       <object class="GtkTreeViewColumn" id="treeviewcolumn0">
                         <child>
                           <object class="GtkCellRendererPixbuf" id="cellrenderertext9"/>
                           <attributes>
-                            <attribute name="pixbuf">0</attribute>
+                            <attribute name="pixbuf">1</attribute>
                           </attributes>
                         </child>
                       </object>
@@ -159,7 +176,7 @@
                         <child>
                           <object class="GtkCellRendererText" id="cellrenderertext2"/>
                           <attributes>
-                            <attribute name="text">1</attribute>
+                            <attribute name="text">2</attribute>
                           </attributes>
                         </child>
                       </object>
@@ -169,7 +186,7 @@
                         <child>
                           <object class="GtkCellRendererPixbuf" id="cellrenderertext4"/>
                           <attributes>
-                            <attribute name="pixbuf">2</attribute>
+                            <attribute name="pixbuf">3</attribute>
                           </attributes>
                         </child>
                       </object>
@@ -180,7 +197,7 @@
                         <child>
                           <object class="GtkCellRendererText" id="cellrenderertext3"/>
                           <attributes>
-                            <attribute name="text">3</attribute>
+                            <attribute name="text">4</attribute>
                           </attributes>
                         </child>
                       </object>
