--- a/cui/uiconfig/ui/pageformatpage.ui
+++ b/cui/uiconfig/ui/pageformatpage.ui
@@ -461,39 +461,39 @@
                         <property name="top_attach">3</property>
                       </packing>
                     </child>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkLabel" id="labelGutterMargin">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="label" translatable="yes" context="pageformatpage|labelGutterMargin">Gutter:</property>
-                    <property name="use_underline">True</property>
-                    <property name="mnemonic_widget">spinMargBot</property>
-                    <property name="xalign">0</property>
-                    <accessibility>
-                      <relation type="label-for" target="spinMargGut"/>
-                    </accessibility>
-                  </object>
-                  <packing>
-                    <property name="left_attach">0</property>
-                    <property name="top_attach">4</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkSpinButton" id="spinMargGut">
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
+                    <child>
+                      <object class="GtkLabel" id="labelGutterMargin">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes" context="pageformatpage|labelGutterMargin">Gutter:</property>
+                        <property name="use_underline">True</property>
+                        <property name="mnemonic_widget">spinMargBot</property>
+                        <property name="xalign">0</property>
+                        <accessibility>
+                          <relation type="label-for" target="spinMargGut"/>
+                        </accessibility>
+                      </object>
+                      <packing>
+                        <property name="left_attach">0</property>
+                        <property name="top_attach">4</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkSpinButton" id="spinMargGut">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
                     <property name="activates_default">True</property>
-                    <property name="truncate_multiline">True</property>
-                    <accessibility>
-                      <relation type="labelled-by" target="labelGutterMargin"/>
-                    </accessibility>
+                        <property name="truncate_multiline">True</property>
+                        <accessibility>
+                          <relation type="labelled-by" target="labelGutterMargin"/>
+                        </accessibility>
+                      </object>
+                      <packing>
+                        <property name="left_attach">1</property>
+                        <property name="top_attach">4</property>
+                      </packing>
+                    </child>
                   </object>
-                  <packing>
-                    <property name="left_attach">1</property>
-                    <property name="top_attach">4</property>
-                  </packing>
                 </child>
               </object>
             </child>
@@ -614,6 +614,34 @@
                                 <property name="expand">False</property>
                                 <property name="fill">True</property>
                                 <property name="position">1</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkLabel" id="labelGutterPosition">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <property name="label" translatable="yes" context="pageformatpage|labelGutterPosition">Gutter position:</property>
+                                <property name="use_underline">True</property>
+                                <property name="mnemonic_widget">comboGutterPosition</property>
+                                <property name="xalign">0</property>
+                              </object>
+                              <packing>
+                                <property name="left_attach">0</property>
+                                <property name="top_attach">7</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkComboBoxText" id="comboGutterPosition">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <items>
+                                  <item translatable="yes" context="pageformatpage|liststoreGutterPosition">Left</item>
+                                  <item translatable="yes" context="pageformatpage|liststoreGutterPosition">Top</item>
+                                </items>
+                              </object>
+                              <packing>
+                                <property name="left_attach">1</property>
+                                <property name="top_attach">7</property>
                               </packing>
                             </child>
                           </object>
